--- a/Moja Stranica/Stranice/ks.html
+++ b/Moja Stranica/Stranice/ks.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="style.css" type="text/css">
+
 </head>
+
 <body>
+
+    <h1> Naslov</h1>
+
+    <p>Paragraf</p>
     
 </body>
 </html>
