--- a/Moja Stranica/Stranice/index.html
+++ b/Moja Stranica/Stranice/index.html
@@ -116,6 +116,12 @@
             
             In the spring, Joel and Ellie arrive in Salt Lake City. Ellie is rendered unconscious after almost drowning, before they are captured by a Firefly patrol. In the hospital, Marlene tells Joel that Ellie is being prepared for surgery: in hope of producing a vaccine for the infection, the Fireflies must remove the infected portion of Ellie's brain, which will kill her. Unwilling to let Ellie die, Joel battles his way to the operating room, kills the lead surgeon, and carries the unconscious Ellie to the parking garage. He is confronted by Marlene, whom he shoots and kills to prevent the Fireflies from pursuing them. On the drive out of the city, when Ellie wakes up, Joel claims that the Fireflies had found many other immune people but were unable to create a cure, and that they have stopped trying. On the outskirts of Tommy's settlement, Ellie expresses her survivor guilt. At her insistence, Joel swears his story about the Fireflies is true. </p>
     </div>
+
+    <div class="razmak"></div>
+    <footer>
+
+        <p>Made by Antonio Obradović</p>
+    </footer>
 </body>
 
 </html>
