--- a/Moja Stranica/Stranice/index.html
+++ b/Moja Stranica/Stranice/index.html
@@ -27,16 +27,15 @@
 
         <div class="logo">
 
-            <h4>THE LAST OF US</h4>
+            <a href="index.html"> <h4>THE LAST OF US</h4> </a> 
 
         </div>
 
         <ul class="nav-links">
 
-            <li> <a href="index.html"> Home</a> </li>
-            <li> <a href="#"> Story</a> </li>
-            <li> <a href="#"> Characthers</a> </li>
-            <li> <a href="#"> About</a> </li>
+            <li> <a href="story.html"> Story</a> </li>
+            <li> <a href="karakteri.html"> Characthers</a> </li>
+            <li> <a href="about.html"> About</a> </li>
 
         </ul>
 
