--- a/Moja Stranica/Stranice/Story/story.html
+++ b/Moja Stranica/Stranice/Story/story.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 
     <!-- za imporat css-a -->
-    <link rel="stylesheet" href="style-story.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
 
 
 </head>
