--- a/Moja Stranica/Stranice/Story/story.html
+++ b/Moja Stranica/Stranice/Story/story.html
@@ -19,7 +19,7 @@
 
         <div class="logo">
 
-            <a href="index.html"> <h4>THE LAST OF US</h4> </a> 
+            <a href="../Main/index.html"> <h4>THE LAST OF US</h4> </a> 
 
         </div>
 
