--- a/Moja Stranica/Stranice/Main/index.html
+++ b/Moja Stranica/Stranice/Main/index.html
@@ -33,7 +33,7 @@
 
         <ul class="nav-links">
 
-            <li> <a href="story.html"> Story</a> </li>
+            <li> <a href="../Story/story.html"> Story</a> </li>
             <li> <a href="karakteri.html"> Characthers</a> </li>
             <li> <a href="about.html"> About</a> </li>
 
