--- a/Moja Stranica/Stranice/Story/story.html
+++ b/Moja Stranica/Stranice/Story/story.html
@@ -45,6 +45,19 @@
     <script src="app.js"></script>
 
     <!-- kraj nav!!!!!!!!!!!!!!!! -->
+
+
+
+    <h1> THE LAST OF US 
+        <br>
+        STORY
+    </h1>
+
+    
+
+
+
+
     
 
     <div class="story">
