--- a/Moja Stranica/Stranice/Main/index.html
+++ b/Moja Stranica/Stranice/Main/index.html
@@ -50,7 +50,7 @@
     </nav>
 
     <!-- ovo je za java script -->
-    <script src="app.js"></script>
+    <script src="../app.js"></script>
 
     <!-- kraj nav!!!!!!!!!!!!!!!! -->
         <h1> THE LAST OF US</h1>
