--- a/Moja Stranica/Stranice/Story/story.html
+++ b/Moja Stranica/Stranice/Story/story.html
@@ -42,7 +42,7 @@
     </nav>
 
     <!-- ovo je za java script -->
-    <script src="app.js"></script>
+    <script src="../app.js"></script>
 
     <!-- kraj nav!!!!!!!!!!!!!!!! -->
 
@@ -56,7 +56,7 @@
     
 
 
-
+<div class="razmak"></div>
 
     
 
