--- a/Moja Stranica/Stranice/Main/index.html
+++ b/Moja Stranica/Stranice/Main/index.html
@@ -65,8 +65,8 @@
        
         <p>The Last of Us is a 2013 action-adventure game developed by Naughty Dog and published by Sony Computer Entertainment. Players control Joel, a smuggler tasked with escorting a teenage girl, Ellie, across a post-apocalyptic United States. The Last of Us is played from a third-person perspective. Players use firearms and improvised weapons, and can use stealth to defend against hostile humans and cannibalistic creatures infected by a mutated fungus in the genus Cordyceps.</p>
 
-        <div class="video">
-        <iframe width="900" height="506.5" src="https://www.youtube.com/embed/X0VubwgS2Y4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="video2">
+        <iframe  src="https://www.youtube.com/embed/X0VubwgS2Y4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
         </div>
 
