--- a/Moja Stranica/Stranice/Story/story.html
+++ b/Moja Stranica/Stranice/Story/story.html
@@ -79,14 +79,17 @@
             <br>
             
             <br>
-            The leader of the Fireflies, Marlene (Merle Dandridge), promises to double their cache in return for smuggling a teenage girl, Ellie (Ashley Johnson), to Fireflies hiding in the Massachusetts State House outside the quarantine zone. Joel, Tess, and Ellie sneak out in the night, but after an encounter with a government patrol, they discover Ellie is infected. Full infection normally occurs in under two days, but Ellie claims she was infected three weeks earlier and that her immunity may lead to a cure. The trio make their way to their destination through hordes of the infected, but find that the Fireflies there have been killed. Tess reveals she has been bitten by an infected and, believing in Ellie's importance, sacrifices herself against pursuing soldiers so Joel and Ellie can escape. Joel decides to find Tommy, a former Firefly, in the hope that he can locate the remaining. <br>
+            The leader of the Fireflies, Marlene (Merle Dandridge), promises to double their cache in return for smuggling a teenage girl, Ellie (Ashley Johnson), to Fireflies hiding in the Massachusetts State House outside the quarantine zone. Joel, Tess, and Ellie sneak out in the night, but after an encounter with a government patrol, they discover Ellie is infected. Full infection normally occurs in under two days, but Ellie claims she was infected three weeks earlier and that her immunity may lead to a cure. The trio make their way to their destination through hordes of the infected, but find that the Fireflies there have been killed. Tess reveals she has been bitten by an infected and, believing in Ellie's importance, sacrifices herself against pursuing soldiers so Joel and Ellie can escape. Joel decides to find Tommy, a former Firefly, in the hope that he can locate the remaining. 
 
         </p>
 
+        <div class="razmak2"></div>
         <div class="video2">
-            <iframe width="900" height="506.5" src="https://www.youtube.com/embed/W01L70IGBgE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe  src="https://www.youtube.com/embed/W01L70IGBgE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         </div>
+
+        <div class="razmak3"></div>
 
 
         <p>
