--- a/Moja Stranica/Stranice/Main/index.html
+++ b/Moja Stranica/Stranice/Main/index.html
@@ -34,7 +34,7 @@
         <ul class="nav-links">
 
             <li> <a href="../Story/story.html"> Story</a> </li>
-            <li> <a href="karakteri.html"> Characthers</a> </li>
+            <li> <a href="../Karakteri/karakteri.html"> Characthers</a> </li>
             <li> <a href="about.html"> About</a> </li>
 
         </ul>
