--- a/Moja Stranica/Stranice/Story/story.html
+++ b/Moja Stranica/Stranice/Story/story.html
@@ -29,7 +29,7 @@
         <ul class="nav-links">
 
             <li> <a href="story.html"> Story</a> </li>
-            <li> <a href="karakteri.html"> Characthers</a> </li>
+            <li> <a href="../Karakteri/karakteri.html"> Characthers</a> </li>
             <li> <a href="about.html"> About</a> </li>
 
         </ul>
