--- a/Moja Stranica/index.html
+++ b/Moja Stranica/index.html
@@ -33,10 +33,9 @@
 
         <ul class="nav-links">
 
-            <li> <a href="../Story/story.html"> Story</a> </li>
-            <li> <a href="../Karakteri/karakteri.html"> Characthers</a> </li>
+            <li> <a href="story.html"> Story</a> </li>
+            <li> <a href="karakteri.html"> Characthers</a> </li>
             <li> <a href="about.html"> About</a> </li>
-
         </ul>
 
         <div class="burger">
@@ -50,7 +49,7 @@
     </nav>
 
     <!-- ovo je za java script -->
-    <script src="../app.js"></script>
+    <script src="app.js"></script>
 
     <!-- kraj nav!!!!!!!!!!!!!!!! -->
         <h1> THE LAST OF US</h1>
