--- a/Moja Stranica/karakteri.html
+++ b/Moja Stranica/karakteri.html
@@ -24,14 +24,14 @@
 
         <div class="logo">
 
-            <a href="../Main/index.html"> <h4>THE LAST OF US</h4> </a> 
+            <a href="index.html"> <h4>THE LAST OF US</h4> </a> 
 
         </div>
 
         <ul class="nav-links">
 
-            <li> <a href="../Story/story.html"> Story</a> </li>
-            <li> <a href="../Karakteri/karakteri.html"> Characthers</a> </li>
+            <li> <a href="story.html"> Story</a> </li>
+            <li> <a href="karakteri.html"> Characthers</a> </li>
             <li> <a href="about.html"> About</a> </li>
 
         </ul>
@@ -47,7 +47,7 @@
     </nav>
 
     <!-- ovo je za java script -->
-    <script src="../app.js"></script>
+    <script src="app.js"></script>
 
     <!-- kraj nav!!!!!!!!!!!!!!!! -->
 
