--- a/story.html
+++ b/story.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=ž, initial-scale=1.0">
+    <meta name="viewport" content="width, initial-scale=1.0">
     <title>Document</title>
 
     <!-- za imporat css-a -->
